--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,9 @@
   --black: rgb(35, 40, 40);
   --lightblack: rgb(65, 60, 60);
   --white: rgb(255, 255, 255);
+  --green: rgb(134, 238, 16);
+  --blue: rgb(0, 255, 234);
+  --yellow: rgb(217, 255, 0);
 }
 
 a {
@@ -21,6 +24,10 @@ a {
 
 h1 {
   font-size: 7.6rem;
+}
+
+.mobile {
+  display: none;
 }
 
 @media screen and (max-width: 1050px) {
@@ -37,6 +44,10 @@ h1 {
   }
   h1 {
     font-size: 2.75rem;
+  }
+
+  .mobile {
+    display: block;
   }
   .desktop-tablet {
     display: none;
