--- a/src/pages/Blog/Blog.css
+++ b/src/pages/Blog/Blog.css
@@ -1,5 +1,26 @@
+.site-logo-link-div {
+  margin: 0 auto;
+  /* width: fit-content; */
+  position: fixed;
+  width: 100%;
+  /* border: 2px solid red; */
+  left: 0;
+  top: 0;
+  padding: 2rem 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(var(--darkblack), var(--black));
+}
+
+.site-logo-link {
+  color: white;
+  font-size: 1.4rem;
+  font-family: var(--sourcecodefont);
+}
+
 .blog-section {
-  margin: 5rem 0;
+  /* margin: 5rem 0; */
   padding: 2rem var(--mainPaddingX);
   font-family: var(--mainFont);
   /* border: 2px solid red; */
@@ -29,6 +50,7 @@
 .description-p {
   line-height: 1.55rem;
   font-size: 1.3rem;
+  width: clamp(65%, 750px, 100%);
 }
 
 .description-p:first-letter {
